# tdi2

./: .gitignore  Backlog.md  CLAUDE.md  Docs-Migration.md  Features.md  Impuls.md  PLUGIN_ECOSYSTEM.md  README.md  Regression.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  Whitepaper.md  build-di.sh  eslint.config.js  package-lock.json  package.json  test-build-time-di.ts  test-di.ts  test-functional-di.tsx  test-simple-di.ts  test-transformation.ts  tsconfig.json  vite-plugin-di-enhanced.ts  vite-plugin-di.ts  vite.config.ts
.claude/agents/: tdi2-service-generator.md
.github/workflows/: README.md  ci.yml
debug/: full.ts
docs/: Enterprise-Implementation.md  Quick-Start.md  README.md  Service-Patterns.md
docs/RFP/: RSI-vs-RtkQuery-Zustand.md  Talk-Abstract.md  Talk-Details-Outline.md  Talk-README.md
docs/SlideDecks/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/SlideDecks/scripts/: setup_environment.py
docs/SlideDecks/slides/: config-react-summit.yaml  config.yaml
docs/SlideDecks/slides/Meetup - Leipzig.js/: Agenda.md  README.md
docs/SlideDecks/slides/Meetup-Leipzig.js/: Abstract.md  Preparations.md  Talk2.md  config.yaml  example-theme.css  slides-speaker-notes.md  slides.md  slides2.md
docs/SlideDecks/src/rsi-presentation/: cli.py
docs/comparisons/: RSI-vs-Angular.md  RSI-vs-Svelte.md
docs/critique/: Memes.md  README.md  React Ecosystem Critique: Core Claims Analysis.md  React Evolution Timeline Simple to Complex.md  TODO.md
docs/docs/: Component-Guide.md  Migration-Strategy.md  RSI-vs-Traditional.md
docs/misc/: view-logic-pattern.md
docs/pain-points/: Architecture-Complexity-Solutions-Comparison.md  Component-Composition-Solutions-Comparison.md  Form-Handling-Solutions-Comparison.md  Hooks-Complexity-and-Rules-Comparison.md  README.md  State-Management-Solutions-Comparison.md  Testing-Challenges-Solutions-Comparison.md
docs/principles/: RSI: Architectural Foundation.md  RSI: KISS-Prinicples.md  RSI: view-state Location.md  RSI: view-state vs business-state.md
docs2/: AST.md  Learnings.md  Troubleshooting.md
examples/architecture-radar/: index.html  package-lock.json  package.json
examples/comparision/: FeatureMatrix.md  README.md
examples/tdi2-basic-example/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/tdi2-ecommerce-example/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
examples/tdi2-enterprise-forms-example/: README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
github-issue-sync/: .env.example  README.md  issues.json  issues.yaml  package.json
github-issue-sync/src/: sync.ts  types.ts
monorepo/: package.json  turbo.json
monorepo/.changeset/: README.md  config.json
monorepo/docs/: EvaluationPlan.md  Feedback.md  Impact.md  Impuls.md  KnownIssues.md  Learnings.md  Market Analysis.md  RSI-Clean-Architecture-SOLID-Principles-Analysis.md  React Service Injection vs Traditional State Management.md  React-Example.md  React-Whitepaper-v0.md  React-Whitepaper-v1.md  Reactivity-Misalignment.md  Readme.md  Recipes-and-Reactive-Services.md  Teaser.md
prod/: Ai-Code-Generator-System-Prompt.md  Features.md  PostProductionRoadmap.md  PotentialProblems.md  Prompt.md  TDI2-Framework-Guide.md
src/: App.tsx  main.tsx  main2.tsx
src/components/: EnhancedFunctionalComponent.tsx  FunctionalExample.tsx  InlineAllRequired.di-transformed.tsx  Router.tsx  (+10 more)
talks/: PotentialProblems.md  Talk-Speaker-Bio-and-Requirements.md  hooksExample.tsx  valitoExample.tsx
task-scheduler/: README.md  main.py  pyproject.toml
task-scheduler/config/: tasks.yaml
task-scheduler/flows/: claude_executor.py  task_processor.py
task-scheduler/services/: token_monitor.py  workspace_manager.py  yaml_manager.py
task-scheduler/templates/prompts/: api_implementation.md  default.md  feature_implementation.md  validation_implementation.md
tools/: build-time-di-transformer.ts  config-manager.ts  dependency-tree-builder.test.ts  dependency-tree-builder.ts  di-transformer.ts  enhanced-di-transformer.test.ts  enhanced-di-transformer.ts  functional-di-enhanced-transformer.ts  functional-di-transformer.ts  interface-resolver.test.ts  interface-resolver.ts  safer-functional-transformer.ts
types/: tdi2.d.ts
(+412 files in other folders)
